Updates for version 0.04.

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -113,7 +113,8 @@ outputs.
 
 However, due to user interest, there is a benchmarking script in
 F<bench/bench.pl> which compares the performance of the module with
-L<JSON::XS> and L<Cpanel::JSON::XS>.
+L<JSON::XS> and L<Cpanel::JSON::XS>. This only compares a few simple
+cases in which the output is correct.
 
 =head1 HISTORY
 
@@ -121,8 +122,8 @@ I started making this module so that, with this and JSON::Parse, I
 wouldn't have to ever use any of the existing JSON modules on CPAN
 ever again. See also L</SEE ALSO>. The exact time I've spent making
 this module is recorded in the file F<timesheet.txt> in the top
-directory of the distribution. At the time of version 0.03_02, I've
-spent 12 hours and 30 minutes working on this.
+directory of the distribution. At the time of version 0.04, I've
+spent 13 hours and 28 minutes working on this.
 
 =cut
 
