Deal with NaN, inf, -inf by stringifying.

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -49,6 +49,10 @@ Bytes of value less than 0x20 are converted into the appropriate JSON
 escapes. Currently, no escaping or checking is done for Unicode
 bytes.
 
+=head3 Integers
+
+=head3 Floating point numbers
+
 =head3 The undefined value
 
 Undefined values are mapped to the JSON literal "null".
