Add a note on object support and on ZZ to the documentation.

--- a/lib/JSON/Create.pod.tmpl
+++ b/lib/JSON/Create.pod.tmpl
@@ -190,7 +190,19 @@ details.
 
 The exact time I've spent making this module is recorded in the file
 F<timesheet.txt> in the top directory of the distribution. At the time
-of version 0.05, I've spent 17 hours and 27 minutes working on this.
+of version 0.05, I've spent 18 hours and 9 minutes working on this.
+
+The module is currently in production everywhere that I need to
+generate JSON within Perl. However, I don't use Perl objects very
+much, and so far I don't have a specific need for booleans, so support
+for these is lagging. Patches are welcome.
+
+Unfortunately, just after the earliest testing version was released to
+CPAN, a weirdo turned up and started harassing me by insisting I had
+to instantly add features that he wanted to the module, or he would
+add a negative review on CPAN ratings. I have deleted the weirdo's bug
+reports, but I cannot delete his CPAN ratings, so this module is stuck
+with an unfortunate rating. Please ignore it.
 
 =cut
 
